--- a/plugins/contracts/contracts-subplugins/src/META-INF/plugin.xml
+++ b/plugins/contracts/contracts-subplugins/src/META-INF/plugin.xml
@@ -10,5 +10,6 @@
   <extensions defaultExtensionNs="org.jetbrains.kotlin.contracts">
     <specificContractExtension implementation="org.jetbrains.kotlin.contracts.contextual.dslmarker.DslMarkerContract"/>
     <specificContractExtension implementation="org.jetbrains.kotlin.contracts.contextual.exceptions.ExceptionContract"/>
+    <specificContractExtension implementation="org.jetbrains.kotlin.contracts.contextual.safebuilders.CallContract"/>
   </extensions>
 </idea-plugin>
