--- a/idea/idea-analysis/resources/org/jetbrains/kotlin/idea/KotlinBundle.properties
+++ b/idea/idea-analysis/resources/org/jetbrains/kotlin/idea/KotlinBundle.properties
@@ -250,4 +250,5 @@ android.klint.inspections.group.name=Android Lint for Kotlin
 
 # Scratch Files
 scratch.run.button=Run Scratch File
+scratch.stop.button=Stop Scratch File
 scratch.clear.button=Clear results
