--- a/plugins/contracts/contracts-plugin/src/META-INF/plugin.xml
+++ b/plugins/contracts/contracts-plugin/src/META-INF/plugin.xml
@@ -9,6 +9,7 @@
 
   <extensions defaultExtensionNs="org.jetbrains.kotlin">
     <contractsExtension implementation="org.jetbrains.kotlin.contracts.contextual.ContractsImplementationExtension"/>
+    <serialization.contractsExtension implementation="org.jetbrains.kotlin.contracts.contextual.serialization.ExtensionContractSerializer"/>
   </extensions>
 
   <extensionPoints>
